<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="SearchActivityViewModel"
            type="com.example.weatherappcode.presentation.search.SearchActivityViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:gravity="center_horizontal"
                tools:ignore="UseCompoundDrawables">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/weather_app"
                   android:fontFamily="@font/roboto_bold"
                   android:textColor="@color/white"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_city"
            android:layout_margin="16dp"
            style="@style/autoCompleteDropdownParent"
            android:hint="@string/search_city">

            <AutoCompleteTextView
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={SearchActivityViewModel.searchValue}"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:onClick="checkWeather"
            android:text="@string/check_weather" />

        <TextView
            android:id="@+id/favorite_list_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_list"
            android:textColor="@color/purple_700"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_bold"
            android:textSize="14sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/saved_city_list"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</layout>
